# rsm

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  mkdocs.yaml  mysql.yaml  pre-commit.yaml  pytest.yaml
docs/: index.md
docs/rsm/: constants.md  db.md  excel.md  main.md  ui.md  utils.md
src/rsm/: constants.py  db.py  excel.py  main.py  ui.py  utils.py
src/rsm/resources/: parser.cfg.yaml
tests/: 01_validate_test.py
tests/data/: Expected.csv  Input_71cols.xlsx  Input_74cols.xlsx  Input_78cols.xlsx  loader.ddl
