[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts  = "--cache-clear --cov rsm"

[tool.coverage.run]
# branch = true
source = ["rsm"]
omit = ["*/db.py", "*/constants.py", "*/ui.py"]

# [tool.coverage.report]
# fail_under = 80
# precision = 2
