[metadata]
name = rsm
version = 2022.07
author = Keiran Raine
author_email = keiran.raine@eahsn.org
description = Package to validate and convert data for ingest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cynapse-ccri/rsm
project_urls =
    Bug Tracker = https://github.com/cynapse-ccri/rsm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    openpyxl==3.0.10
    click==8.1.3
    click-option-group==0.5.3
    pyyaml==6.0
tests_require =
    pytest==7.1.2

[options.extras_require]
mysql = mysql-connector-python==8.0.29
tests =
    pytest==7.1.2
    pytest-cov[toml]==3.0.0
docs =
    mkdocs
    mkdocstrings[python]
    mkdocs-material

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rsm=rsm.ui:cli

[options.package_data]
rsm=resources/*.yaml
